# ducky-dbt

./: .env.example  .gitignore  main.py  pyproject.toml
dbt_transformations/: .user.yml  dbt_project.yml  profiles.yml
dbt_transformations/analyses/: articles_by_years.sql  brands_by_years.sql  explore.sql  suppliers_by_years.sql
dbt_transformations/models/: bao_stocks_and_mins.sql  lmmat.sql  sales_history.sql  schema.yml  sources.yml  stock.sql
dbt_transformations/models/marts/: et_purchases.sql
dbt_transformations/models/marts/pg_database/: fi_updatable_products.sql  fm_updatable_products.sql  zf_updatable_products.sql
dbt_transformations/models/staging/: stg_bao_firma.sql  stg_bao_lmmat.sql  stg_bao_stock.sql
dbt_transformations/models/staging/auger/: stg_auger__db_merchantitems.sql  stg_auger__prices.sql
dbt_transformations/models/staging/autos/: stg_autos__db_merchant_items.sql
dbt_transformations/models/staging/bosch/: stg_bosch__cv_products.sql
dbt_transformations/models/staging/cei/: stg_cei__db_factoryitems.sql  stg_cei__prices.sql
dbt_transformations/models/staging/fm/: stg_fm__merchantitems.sql  stg_fm__prices.sql
dbt_transformations/models/staging/hengst/: stg_hengst__products.sql
dbt_transformations/models/staging/mann/: stg_mann__products.sql
dbt_transformations/models/staging/meko_et/: schema.yml  stg_bao__db_articles.sql  stg_bao__firma.sql  stg_bao__manufactureritems.sql  (+14 more)
dbt_transformations/seeds/: bao_product_groups.csv  rvsoft_company_categories.csv  rvsoft_cv_groups.csv  schema.yml  tecdoc_ids.csv  tecdoc_ids.tsv
(+8 files in other folders)
