[project]
name = "mydbt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">3.12,<3.13"
dependencies = [
    "dbfread>=2.0.7",
    "dbt>=1.0.0.38.36",
    "dbt-duckdb>=1.9.2",
    "duckdb>=1.3.2",
    "ipdb>=0.13.13",
    "pandas>=2.3.1",
    "polars>=1.30.0",
    "pyarrow>=20.0.0",
    "sqlfluff>=3.3.1",
]
